--- a/templates/view_complaint.html
+++ b/templates/view_complaint.html
@@ -47,12 +47,12 @@
                     </a>
                 </li>
                 <li>
-                    <a class="" href="/workers">
+                    <a class=" " href="/workers">
                         <span class="icon user-3" aria-hidden="true"></span>Workers
                     </a>
                 </li>
                 <li>
-                    <a class="active" href="/construction">
+                    <a class=" " href="/construction">
                         <span class="icon location" aria-hidden="true"></span>Construction Site
                     </a>
                 </li>
@@ -62,12 +62,11 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" " href="/complaints">
+                    <a class="active" href="/complaints">
                         <span class="icon message" aria-hidden="true"></span>Complaints
                     </a>
                     <span class="msg-counter">2</span>
                 </li>
-
                 
                 
 
@@ -123,19 +122,21 @@
     <nav class="main-nav--bg">
   <div class="container main-nav">
     <div class="main-nav-start">
-        <h2 class="main-title">Construction Site Profile</h2>
+      <div class="search-wrapper">
+          <h2 class="main-title">Complaints</h2>
+      </div>
     </div>
     <div class="main-nav-end">
       
 
 
 
+      
       <!-- for sidebar toggle do not touch -->
       <button class="sidebar-toggle transparent-btn" title="Menu" type="button">
         <span class="sr-only">Toggle menu</span>
         <span class="icon menu-toggle--gray" aria-hidden="true"></span>
       </button>
-
 
 
 
@@ -177,189 +178,126 @@
   </div>
 </nav>
     <!-- ! Main -->
-    <script>
-          
-      var stateg2 ={
-        'cst':[],
-        'count':[],
-      }
-
-      var dataURL=`/consg1`
-      $.ajax({
-        method:'GET',
-        url:dataURL,
-        success: function(response){
-          console.log('RESPONSE:', response)
-          for (var i in response){
-            var key = Object.keys(response[i])[0]
-            var value = Object.values(response[i])[0]
-
-            stateg2.cst.push(key)
-            stateg2.count.push(value)
-
-          }
-          console.log('STATE:',stateg2)
-          buildg2chart() 
-
-        }
-      }
-
-      )
-
-
-      function buildg2chart(){
-        var g2data={
-          "type":"bar",
-          "title": {
-            "text": "Today's Site Attendance"
-          },
-          "scale-x":{
-            "values":stateg2.cst
-          },
-          
-          "series":[
-            {
-                "values":stateg2.count
-            }
-          ]
-        }
-
-        zingchart.render({
-          id: "g1chart",
-          data: g2data,
-
-
-        });
-
-      }
-    </script>
-
     <main class="main users chart-page" id="skip-target">
       <div class="container">
-        <div class="row stat-cards">
-          <div class="col-lg-9">
-            <article class="stat-cards-item-site">
-                <div class="stat-cards-icon-site-profile primary">
+        <div class="row">
+          <!-- <div class="col-md-6">
+              <div class="col-md-3">
+                <article class="stat-cards-item-workers">
+                  
+                  <div class="stat-cards-info-workers">
+                    <p class="stat-cards-info__name-workers">{{i.sname}}</p>
+                    <p class="stat-cards-info__title-workers">{{i.city}}</p>
+                  </div>
+                </article>
+              </div>
+          </div> -->
+
+          <div class="col-lg-6">
+            
+            <article class="white-block">
+            <div class="row">
+            <div class="col-md-4">
+                <article class="stat-cards-item-workers">
+                  <!-- <div class="stat-cards-icon-workers primary">
                     <i data-feather="map-pin" aria-hidden="true"></i>
+                  </div> -->
+                  <div class="stat-cards-info-workers" style="text-align: center;">
+                    <p style="color:red ;">Invalid</p>
+                  </div>
+                </article>
+            </div>
+
+            <div class="col-md-4">
+                <article class="stat-cards-item-workers">
+                  <!-- <div class="stat-cards-icon-workers primary">
+                    <i data-feather="map-pin" aria-hidden="true"></i>
+                  </div> -->
+                  <div class="stat-cards-info-workers" style="text-align: center;">
+                    <p style="color:blue;">Inprogress</p>
+                  </div>
+                </article>
+            </div>
+
+            <div class="col-md-4">
+                <article class="stat-cards-item-workers">
+                  <!-- <div class="stat-cards-icon-workers primary">
+                    <i data-feather="map-pin" aria-hidden="true"></i>
+                  </div> -->
+                  <div class="stat-cards-info-workers" style="text-align: center;">
+                    <p style="color:green;">Solved</p>
+                  </div>
+                </article>
+            </div>
+            </div>
+            </article>
+
+            <article class="white-block">
+                <h2 class="main-title">{{com.g_title}}</h2>
+                <br>
+                  
+                <p><h3 class="filter-text">From : {{com.worker.name}} </h3> </p><br>
+                <p><h3 class="filter-text">Status : {{com.g_status}}</h3> </p><br>
+                <p><h3 class="filter-text">Date : {{com.g_date}} </h3> </p><br>
+                <p><h3 class="filter-text">Details :</h3> </p>
+                <br>
+                <p>{{com.g_details}}</p>
+
+              </article>
+
+
+
+            
+          </div>
+        
+
+
+          <div class="col-lg-6">
+            <article class="white-block">
+            <div  style="height:550px;border:1px solid #ccc;overflow:auto;">
+                <br>
+                {% for a in cht %}
+                <div class="col-md-12">
+                    <article class="stat-cards-item-workers">
+                      <div class="stat-cards-info-workers">
+                        <p class="stat-cards-info__title-workers">{{a.sender}}</p>
+                        <p class="stat-cards-info__name-workers">{{a.msg}}</p>
+                        <p class="stat-cards-info__title-workers">{{a.cdate}} {{a.ctim}}</p>
+                      </div>
+                    </article>
                 </div>
-                <div class="stat-cards-info-site">
-                    <p class="stat-cards-info__name-site">{{construction_site_profile.sname}}</p>
-                    <p class="stat-cards-info__title-site">{{construction_site_profile.location}} </p>
-                    <p class="stat-cards-info__title-site">{{construction_site_profile.city}}</p>
-                    <p class="stat-cards-info__title-site">{{construction_site_profile.contact}}</p>
-                    <p class="stat-cards-info__title-site">{{construction_site_profile.status}}</p>
-                </div>
+                <br> 
+                {% endfor %}
+            </div>
+
+            <br>
+            <article class="stat-cards-item-workers">
+                <div class="col-lg-9">
+                <form id="chat" action="" method="POST">
+               {% csrf_token %}
+            
+            
+                <input type="hidden" name="sender" value="Admin">
+                <label class="form-label-wrapper">
+                    <input type="text" id="mes" name="mes" placeholder="Enter Message">
+                </label>
+            
+            </div>
+            <div class="col-md-3">
+                <button class="button1-fix primary-default-btn transparent-btn" type="submit">Submit</button>
+            </div>
+            </form>
+            </article>
+
+
+            
+
+
+
             </article>
           </div>
 
-          <div class="col-lg-3">
-            <article class="white-block-center">
-              <div class="top-cat-title">
-                <h3>Documents</h3>
-              </div>
-              <ul class="top-cat-list">
-                <li>
-                  <a href="##">
-                    <div class="top-cat-list__title">
-                      <button class="button1-fix primary-default-btn transparent-btn">Add Documents</button> 
-                    </div></a></li>
-                    <li>
-                      <a href="##">
-                        <div class="top-cat-list__title">
-                          <button class="button1-fix primary-default-btn transparent-btn">View Documents</button> 
-                        </div></a></li></ul></article>
-          </div>
-
         </div>
-        
-        
-      <div class="row">
-        
-        
-        <div id="g1chart"></div>
-
-
-
-        <div class="col-lg-9">
-          <div class="users-table table-wrapper">
-            <table class="posts-table">
-              <thead>
-                <tr class="users-table-info">
-                  <th></th>
-                  <th>Worker Name</th>
-                  <th>Date</th>
-                  <th>Time</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for a in att %}
-                {%if a.site_id == construction_site_profile.id %}
-                <tr>
-                  <td>
-                    <div class="stat-cards-icon-workers-list primary">
-                      <i data-feather="user" aria-hidden="true"></i>
-                    </div>
-                  </td>
-                  <td>
-                    {{a.worker.name}}
-                  </td>
-                  
-                  <td>{{a.ada}}</td>
-                  <td>{{a.atim}}</td>
-                </tr>
-                {% endif %}
-                {% endfor %} 
-                <tr>
-                  
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          
-          <article class="white-block">
-            <h2 class="main-title">Filter</h2>
-            <br>
-            <form method="POST", id="fil">
-              {% csrf_token %}
-              <h3 class="filter-text">From :
-                <br> 
-                <input class="form-input" type="date" name="fromdt" id="fromdt" required>
-                    
-                </h3>
-                <h3 class="filter-text">
-                To : 
-                <br>
-                <input class="form-input" type="date" name="todt" id="todt" required>
-                
-              </h3>
-              <h3 class="filter-text">
-                Worker :
-                <br>
-                <input class="form-input" list="worker" type="text" name="st" id="st" placeholder="Enter Site name" required>
-                <datalist id="worker">
-                  {% for i in worker%}
-                    <option value ={{i.id}}>{{i.name}}</option>
-                  {% endfor %}
-                  <option value ='9999'>all</option>
-                </datalist>
-              </h3>
-              <button class="button1 primary-default-btn transparent-btn">Submit</button>
-            </form>
-             
-          </article>
-
-
-          
-
-          
-        </div>
-      </div>  
       </div>
     </main>
     <!-- ! Footer -->
