worker and admin authoraization

--- a/templates/empreg.html
+++ b/templates/empreg.html
@@ -69,6 +69,7 @@
                 </label>
                 
                 <br/>
+                {{form.errors}}
                 <input type="submit" name="empreg">
             </form>
         </article>
