--- a/templates/mobindex.html
+++ b/templates/mobindex.html
@@ -168,6 +168,7 @@
               <span class="sr-only">Toggle menu</span>
               <span class="icon menu-toggle--gray" aria-hidden="true"></span>
             </button>
+            <span>Hello, {{request.user}}</span>
 
 
             <!-- for google translation -->
