--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -207,12 +207,16 @@
             <h3 class="container-title">Calculate Salary</h3>
             <form method="POST" , id = "salcal">
               {% csrf_token %}
-              <br>
+              
               <h4>Salary per day : {{cs.spd}}/-</h4>
               <br><br>
               <h4>
-                Salary :
-                <input class="form-date-input" list="month" name="mth" id="mth" type="text" placeholder="Month" required>
+                From :
+                <input class="form-input" type="date" name="fromdt" id="fromdt" required>
+                To: 
+                <input class="form-input" type="date" name="todt" id="todt" required>
+
+                <!-- <input class="form-date-input" list="month" name="mth" id="mth" type="text" placeholder="Month" required>
                 <datalist id="month">
                   <option value="01">
                   <option value="02">
@@ -235,17 +239,17 @@
                   <option value="2024">
                   <option value="2025">
                   <option value="2026">
-                </datalist>
+                </datalist> -->
 
               </h4>
-              <br><br>
+              <br>
               <h4>
-                Number of days :{{cnt}}
+                Number of days : {{cnt}}
               </h4>
               <br>
               <br>
               <h4>
-                Calculated Salary :{{amt}}
+                Calculated Salary : {{amt}}
               </h4>
               <br>
               <br>
