--- a/templates/mobviewcomplaint.html
+++ b/templates/mobviewcomplaint.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WMS | Complaint</title>
+  <title>WMS | View Complaint</title>
   <!-- Favicon -->
   <link rel="shortcut icon" href="{% static 'img/svg/logo.svg' %}" type="image/x-icon">
   <!-- Custom styles -->
@@ -39,26 +39,26 @@
         <div class="sidebar-body">
           <ul class="sidebar-body-menu">
             <li>
-              <a class="" href="mobindex"><span class="icon home" aria-hidden="true"></span>Home</a>
+              <a class="" href="/mobindex"><span class="icon home" aria-hidden="true"></span>Home</a>
             </li>
             <li>
-              <a class=" " href="mobattendance">
+              <a class=" " href="/mobattendance">
                 <span class="icon document" aria-hidden="true"></span>Attendance
               </a>
             </li>
             
             <li>
-              <a class="" href="mobcalculate">
+              <a class="" href="/mobcalculate">
                 <span class="icon wallet" aria-hidden="true"></span>Calculate Salary
               </a>
             </li>
 
             <li>
-              <a class="active" href="mobcomplaint">
+              <a class="active" href="/mobcomplaint">
                 <span class="icon message" aria-hidden="true"></span>Complaints
               </a>
             </li>
-
+            
             <!-- for sidebar toggle pls do not touch -->
             <li>
               <a class="show-cat-btn" href="##">
@@ -107,7 +107,7 @@
         <div class="container main-nav">
           <div class="main-nav-start">
             <div class="search-wrapper">
-              <h2 class="main-title">Complaint Page</h2>
+              <h2 class="main-title">View Complaint</h2>
             </div>
           </div>
           <div class="main-nav-end">
@@ -224,44 +224,89 @@
       <!-- ! Main -->
       <main class="main users chart-page" id="skip-target">
         <div class="container">
-          <!-- <h2 class="main-title">Dashboard</h2> -->
-          <div class="row stat-cards">
-            <div class="col-lg-3">
+          <div class="row">
+            <!-- <div class="col-md-6">
+                <div class="col-md-3">
+                  <article class="stat-cards-item-workers">
+                    
+                    <div class="stat-cards-info-workers">
+                      <p class="stat-cards-info__name-workers">{{i.sname}}</p>
+                      <p class="stat-cards-info__title-workers">{{i.city}}</p>
+                    </div>
+                  </article>
+                </div>
+            </div> -->
+  
+            <div class="col-lg-6">
+              
+              
               <article class="white-block">
-                <button class="btn primary-default-btn transparent-btn">Send Complaint</button>
+                  <h2 class="main-title">{{com.g_title}}</h2>
+                  <br>
+                    
+                  <p><h3 class="filter-text">From : {{com.worker.name}} </h3> </p><br>
+                  <p><h3 class="filter-text">Status : {{com.g_status}}</h3> </p><br>
+                  <p><h3 class="filter-text">Date : {{com.g_date}} </h3> </p><br>
+                  <p><h3 class="filter-text">Details :</h3> </p>
+                  <br>
+                  <p>{{com.g_details}}</p>
+  
+                </article>
+  
+  
+  
+              
+            </div>
+          
+  
+  
+            <div class="col-lg-6">
+              <article class="white-block">
+              <div  style="height:550px;border:1px solid #ccc;overflow:auto;">
+                  <br>
+                  {% for a in cht %}
+                  <div class="col-md-12">
+                      <article class="stat-cards-item-workers">
+                        <div class="stat-cards-info-workers">
+                          <p class="stat-cards-info__title-workers">{{a.sender}}</p>
+                          <p class="stat-cards-info__name-workers">{{a.msg}}</p>
+                          <p class="stat-cards-info__title-workers">{{a.cdate}} {{a.ctim}}</p>
+                        </div>
+                      </article>
+                  </div>
+                  <br> 
+                  {% endfor %}
+              </div>
+  
+              <br>
+              <article class="stat-cards-item-workers">
+                  <div class="col-lg-9">
+                  <form id="chat" action="" method="POST">
+                 {% csrf_token %}
+              
+              
+                  <input type="hidden" name="sender" value="Worker">
+                  <label class="form-label-wrapper">
+                      <input type="text" id="mes" name="mes" placeholder="Enter Message">
+                  </label>
+              
+              </div>
+              <div class="col-md-3">
+                  <button class="button1-fix primary-default-btn transparent-btn" type="submit">Submit</button>
+              </div>
+              </form>
+              </article>
+  
+  
+              
+  
+  
+  
               </article>
             </div>
-            
-          </div>
-          
-          <div class="row">
-            <div class="col-lg-3">
-            <article class="white-block">
-              <div class="top-cat-title">
-                <h3>Complaints</h3>
-              </div>
-              <ul class="top-cat-list">
-                {% for g in gri %}
-                <li>
-                  <a href="{% url 'mobviewcomplaint' g.id %}">
-                    <div class="top-cat-list__title">
-                      {{g.g_title}} <span>{{g.g_date}}</span>
-                    </div>
-                    <div class="top-cat-list__subtitle">
-                      Status: {{g.g_status}}
-                    </div>
-                  </a>
-                </li>
-                {% endfor %}
-                
-              </ul>
-            </article>
-            </div>
+  
           </div>
         </div>
-        
-
-          
       </main>
       <!-- ! Footer -->
       <footer class="footer">
