--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -185,6 +185,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-9">
+                <div  style="height:650px;border:1px solid #ccc;overflow:auto;">
                 <div class="users-table table-wrapper">
                   <table class="posts-table">
                     <thead>
@@ -231,6 +232,7 @@
                       </tr>
                     </tbody>
                   </table>
+                </div>
                 </div>
               </div>
 
