--- a/templates/worker_profile.html
+++ b/templates/worker_profile.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -212,9 +217,75 @@
                         </div></a></li></ul></article>
           </div>
         </div>
+      
+        <script>
+          
+          var state ={
+            'items':[],
+            'values':[],
+          }
+
+          var dataURL=`/workg1/{{worker_profile.id}}`
+          $.ajax({
+            method:'GET',
+            url:dataURL,
+            success: function(response){
+              console.log('RESPONSE:', response)
+              for (var i in response){
+                var key = Object.keys(response[i])[0]
+                var value = Object.values(response[i])[0]
+
+                state.items.push(key)
+                state.values.push(value)
+
+              }
+              console.log('STATE:',state)
+              buildchart() 
+
+            }
+          }
+
+          )
+
+
+          function buildchart(){
+            var chartdata={
+              "type":"line",
+              "title": {
+                "text": "Attendance Time"
+              },
+              "scale-x":{
+                "values":state.items
+              },
+              
+              "series":[
+                {
+                    "values":state.values
+                }
+              ]
+            }
+  
+            zingchart.render({
+              id: "trychart",
+              data: chartdata,
+  
+  
+            });
+
+          }
+
+        </script>
         
       <div class="row">
+
+        <div class="col-md-12">
+          <article class="white-block">
+          <div id ="trychart"></div>
+        </article>
+        </div>
+
         <div class="col-lg-9">
+          <div  style="height:550px;border:1px solid #ccc;overflow:auto;">
           <div class="users-table table-wrapper">
             <table class="posts-table">
               <thead>
@@ -258,6 +329,7 @@
                 </tr>
               </tbody>
             </table>
+          </div>
           </div>
         </div>
         <div class="col-lg-3">
