--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -42,7 +42,7 @@
               <a class=" " href="/home"><span class="icon home" aria-hidden="true"></span>Home</a>
             </li>
             <li>
-              <a class=" " href="attendance">
+              <a class=" " href="/attendance">
                 <span class="icon document" aria-hidden="true"></span>Attendance
               </a>
             </li>
@@ -65,7 +65,6 @@
               <a class=" " href="/complaints">
                 <span class="icon message" aria-hidden="true"></span>Complaints
               </a>
-              <span class="msg-counter">2</span>
             </li>
 
 
