--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -65,7 +65,6 @@
                     <a class="active" href="/complaints">
                         <span class="icon message" aria-hidden="true"></span>Complaints
                     </a>
-                    <span class="msg-counter">2</span>
                 </li>
                 
                 
@@ -250,7 +249,7 @@
 
               </h3>
               <h3 class="filter-text">
-                Construction Site :
+                Status :
                 <br>
                 <input class="form-input" list="site" type="text" name="st" id="st" placeholder="Enter Site name"
                   required>
