--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                     <a class="active" href="/home"><span class="icon home" aria-hidden="true"></span>Home</a>
                 </li>
                 <li>
-                    <a class=" " href="attendance">
+                    <a class=" " href="/attendance">
                         <span class="icon document" aria-hidden="true"></span>Attendance
                     </a>
                 </li>
@@ -67,7 +67,6 @@
                     <a class=" " href="/complaints">
                         <span class="icon message" aria-hidden="true"></span>Complaints
                     </a>
-                    <span class="msg-counter">2</span>
                 </li>
                 
                 
@@ -139,7 +138,6 @@
         <span class="sr-only">Toggle menu</span>
         <span class="icon menu-toggle--gray" aria-hidden="true"></span>
       </button>
-      <span>Hello, {{request.user}}</span>
 
 
 
