--- a/templates/mobcomplaint.html
+++ b/templates/mobcomplaint.html
@@ -227,9 +227,11 @@
           <!-- <h2 class="main-title">Dashboard</h2> -->
           <div class="row stat-cards">
             <div class="col-lg-3">
+              <a href="{% url 'mobsendcomplaint' %}">
               <article class="white-block">
                 <button class="btn primary-default-btn transparent-btn">Send Complaint</button>
               </article>
+              </a>
             </div>
             
           </div>
