--- a/templates/mobindex.html
+++ b/templates/mobindex.html
@@ -252,21 +252,9 @@
           </div>
 
           <div class="row stat-cards">
+            
             <div class="col-md-6 col-xl-3">
-              <a href="##">
-                <article class="stat-cards-item">
-                  <div class="stat-cards-icon warning">
-                    <i data-feather="bar-chart-2" aria-hidden="true"></i>
-                  </div>
-                  <div class="stat-cards-info">
-                    <p class="stat-cards-info__name">Analysis</p>
-                    <p class="stat-cards-info__title">Analyse Your Data</p>
-                  </div>
-                </article>
-              </a>
-            </div>
-            <div class="col-md-6 col-xl-3">
-              <a href="/attendance">
+              <a href="/mobattendance">
                 <article class="stat-cards-item">
                   <div class="stat-cards-icon primary">
                     <i data-feather="list" aria-hidden="true"></i>
@@ -279,7 +267,7 @@
               </a>
             </div>
             <div class="col-md-6 col-xl-3">
-              <a href="/paysalary">
+              <a href="/mobcalculate">
                 <article class="stat-cards-item">
                   <div class="stat-cards-icon success">
                     <i data-feather="dollar-sign" aria-hidden="true"></i>
@@ -292,7 +280,7 @@
               </a>
             </div>
             <div class="col-md-6 col-xl-3">
-              <a href="##">
+              <a href="/mobcomplaint">
                 <article class="stat-cards-item">
                   <div class="stat-cards-icon purple">
                     <i data-feather="message-square" aria-hidden="true"></i>
