--- a/templates/workers.html
+++ b/templates/workers.html
@@ -65,7 +65,6 @@
                     <a class=" " href="/complaints">
                         <span class="icon message" aria-hidden="true"></span>Complaints
                     </a>
-                    <span class="msg-counter">2</span>
                 </li>
                 
                 
@@ -279,6 +278,12 @@
                     {{form.wadd}}
                     <!-- <input class="form-input" type="text" placeholder="Enter Worker's Address" required> -->
 
+                </label>
+                <label class="form-label-wrapper">
+                  <p class="form-label">Worker Reference</p>
+                  {{form.w_user}}
+                  <!-- <input class="form-input" type="text" placeholder="Enter Worker's Address" required> -->
+                  
                 </label>
                 <label class="form-label-wrapper">
                     <p class="form-label">Worker Contact no.</p>
